--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "funkis": "^0.1.1"
   },
   "devDependencies": {
-    "mocha": "^1.21.4"
+    "coveralls": "^2.11.1",
+    "istanbul": "^0.3.0",
+    "mocha": "^1.21.4",
+    "mocha-lcov-reporter": "0.0.1"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "istanbul test _mocha --report html -- -R spec"
   },
   "author": "Marcus Stade",
   "license": "MIT"
