Fixed package.json pointing to the wrong index file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "URIt",
   "version": "0.0.0",
   "description": "URI template library",
-  "main": "index.js",
+  "main": "lib/URIt.js",
   "directories": {
     "test": "test"
   },
